smartemission/smartemission#132 use JAVA_OPTS mem settings from Docker env